# 1.58bit_model

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  fineweb_10bt.yaml
scripts/: download_fineweb_edu.py
src/titanbit/: __init__.py  cli.py
src/titanbit/alignment/: __init__.py  data.py  dpo.py
src/titanbit/interpretability/: __init__.py  circuits.py  probing.py
src/titanbit/model/: __init__.py  bitlinear.py  config.py  kernels.py  transformer.py
src/titanbit/serving/: __init__.py  engine.py  speculative.py
src/titanbit/training/: data.py  stability.py  trainer.py
src/titanbit/utils/: metrics.py
tests/: __init__.py  test_alignment.py  test_bitlinear.py  test_model.py  test_serving_and_interp.py
